build command and whitelist

--- a/src/config.json
+++ b/src/config.json
@@ -4,7 +4,8 @@
         "logChannel": "1065242016285466696",
         "membercount": "1065248789755076628",
         "membercounttext": "👥  𝗠𝗶𝘁𝗴𝗹𝗶𝗲𝗱𝗲𝗿: ",
-	"autorole": "1069343948373495918"
+        "bauchannel": "1094362879567859834",
+	    "autorole": "1069343948373495918"
     },
     "mysql": {
         "host": "192.168.178.31",
